# wikiplots

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.html  database.py  docker-compose.yml  load_wikiplots.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
